# eventBuzz

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  font-options-preview.html  theme-preview-emerald-pulse.html  theme-preview-forest-green.html  theme-preview.html
.github/workflows/: android.yml  backend.yml
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/core/common/: build.gradle.kts
android/core/database/: build.gradle.kts
android/core/datastore/: build.gradle.kts
android/core/network/: build.gradle.kts
android/domain/: build.gradle.kts
android/gradle/: libs.versions.toml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: categories.py  events.py  health.py  router.py
backend/app/core/: security.py
backend/app/models/: __init__.py  category.py  event.py  event_image.py  event_tag.py  user.py
backend/app/schemas/: category.py  common.py  event.py
backend/app/scripts/: seed_categories.py  seed_events.py
backend/app/services/: event_service.py
backend/tests/: conftest.py  test_events.py  test_health.py
docs/strategy/: 00-STRATEGY-OVERVIEW.md  01-ACCEPTED-DEFAULTS.md  01-CLARIFICATION-FLOW.md  02-PRODUCT-DESIGN-UI-UX.md  03-SYSTEM-ARCHITECTURE.md  04-DATABASE-SCHEMA-API.md  05-DEPLOYMENT-DEVOPS.md  06-GOVERNANCE-SECURITY.md  07-AI-ASSISTED-DEVELOPMENT.md  08-ROADMAP-LEARNING-PLAN.md
(+55 files in other folders)
